deps/jansson/test/suites/invalid/unterminated-array/error.normal
2 0 5
']' expected near end of file
